--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,10 +1,15 @@
 {
     "compilerOptions": {
+        "esModuleInterop": true,
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
         "target": "ES2020",
         "sourceMap": true,
         "outDir": "dist",
+        "forceConsistentCasingInFileNames": true,
+    },
+    "ts-node": {
+        "esm": true
     },
     "include": [
         "src/**/*"
